<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding">

    <TextView
        android:id="@+id/viewerTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/viewer_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- "To" row -->
    <TextView
        android:id="@+id/toLabelViewerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_to"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/viewerTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/section_gap"/>

    <TextView
        android:id="@+id/toValueTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/empty_value"
        app:layout_constraintBaseline_toBaselineOf="@id/toLabelViewerTextView"
        app:layout_constraintStart_toEndOf="@id/toLabelViewerTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/field_gap"/>

    <!-- Subject row -->
    <TextView
        android:id="@+id/subjectLabelViewerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_subject"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/toValueTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/section_gap"/>

    <TextView
        android:id="@+id/subjectValueTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/empty_value"
        app:layout_constraintBaseline_toBaselineOf="@id/subjectLabelViewerTextView"
        app:layout_constraintStart_toEndOf="@id/subjectLabelViewerTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/field_gap"/>

    <!-- Message label -->
    <TextView
        android:id="@+id/messageLabelViewerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_message"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/subjectValueTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/section_gap"/>

    <!-- Scrollable message "card" -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/messageScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:background="@android:color/darker_gray"
        android:padding="@dimen/card_padding"
        app:layout_constraintTop_toBottomOf="@id/messageLabelViewerTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/section_gap">

        <TextView
            android:id="@+id/messageValueTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_value"
            android:textSize="16sp"/>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>